add completed masthead and footer for index.html

--- a/index.html
+++ b/index.html
@@ -6,29 +6,41 @@
     <title>Oathbringer</title>
   </head>
   <body>
-    <div class="top">
-      <img src="img/highstorm.jpg" alt="little icon">
-
-    </div>
-    <div class="main cf">
-      <div class="img-card femal">
-        <img src="img/female.jpg" alt="female">
-
+    <div class="container">
+      <div class="top masthead">
+        <img src="img/highstorm.jpg" alt="little icon">
+        <div class="home nav">
+          <p>home</p>
+        </div>
+        <div class="about nav">
+          <p>about</p>
+        </div>
+        <div class="buy nav">
+          <p>buy</p>
+        </div>
       </div>
-      <div class="img-card male">
-        <img src="img/male.jpg" alt="male">
-        <div class="table">
+      <div class="main cf">
+        <div class="img-card female">
+          <img src="img/female.jpg" alt="female">
+          <div class="caption">
+            <p>Buy this book and read it immediately!</p>
+          </div>
+        </div>
+        <div class="img-card male">
+          <img src="img/male.jpg" alt="male">
+          <div class="table">
+
+          </div>
 
         </div>
-
+      </div>
+      <div class="foot cf">
+        <img src="img/hand.jpg" alt="hand">
+        <img src="img/light-and-dark.jpg" alt="light and dark">
+        <img src="img/secrets.jpg" alt="secrets">
+        <img src="img/animal.jpg" alt="animal">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
-    <div class="foot cf">
-      <img src="img/hand.jpg" alt="hand">
-      <img src="img/light-and-dark.jpg" alt="light and dark">
-      <img src="img/secrets.jpg" alt="secrets">
-      <img src="img/animal.jpg" alt="animal">
-    </div>
-
   </body>
 </html>
