add final css styling elements and finished html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <p>about</p>
         </div>
         <div class="buy nav">
-          <p>buy</p>
+          <p>Buy Oathbringer</p>
         </div>
       </div>
       <div class="main cf">
@@ -29,7 +29,32 @@
         <div class="img-card male">
           <img src="img/male.jpg" alt="male">
           <div class="table">
-
+            <table>
+              <thead>
+                <tr>
+                  <th>Main Characters of Oathbringer</th>
+                  <th>Gender</th>
+                  <th>Title</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Dalinar Kholin</td>
+                  <td>Male</td>
+                  <td>Knights Radiant founder</td>
+                </tr>
+                <tr>
+                  <td>Shallan Davar</td>
+                  <td>Female</td>
+                  <td>Light Weaver</td>
+                </tr>
+                <tr>
+                  <td>Kaladin Stormblessed</td>
+                  <td>Male</td>
+                  <td>Wind Runner</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
 
         </div>
